test(allure): refactor notification/support tests to should-when + issue 13 metadata
Agent-Logs-Url: https://github.com/APSAS-Testing-Course-UTH/apsas-test/sessions/0e73788e-6907-497b-9727-c22c1fc63669

Co-authored-by: tozydev <114842493+tozydev@users.noreply.github.com>